Feat/dialogpt en (#136)
* feat: dialogpt

* feat: dialogpt en

* fix: add dialogpt

* fix: new version

* fix: codestyle

* more configs

* more configs

* fix: emotion skill less confident

* fix: formatting

* fix: intent catcher

* fix: check for dialogpt

* fix: codestyle

* fix: signature of the function

--- a/assistant_dists/dream/cpu.yml
+++ b/assistant_dists/dream/cpu.yml
@@ -43,4 +43,6 @@ services:
     environment:
       DEVICE: cpu
       CUDA_VISIBLE_DEVICES: ""
-
+  dialogpt:
+    environment:
+      CUDA_VISIBLE_DEVICES: ""
