--- a/assistant_dists/dream/dev.yml
+++ b/assistant_dists/dream/dev.yml
@@ -394,6 +394,11 @@ services:
       - "./annotators/midas_predictor:/src"
     ports:
       - 8121:8121
+  dialogpt:
+    volumes:
+      - "./services/dialogpt:/src"
+    ports:
+      - 8125:8125
   dff-template-skill:
     volumes:
       - "./skills/dff_template_skill:/src"
