--- a/assistant_dists/dream/proxy.yml
+++ b/assistant_dists/dream/proxy.yml
@@ -584,7 +584,15 @@ services:
     environment:
       - PROXY_PASS=dream.deeppavlov.ai:8121
       - PORT=8121
-
+  
+  dialogpt:
+    command: [ "nginx", "-g", "daemon off;" ]
+    build:
+      context: dp/proxy/
+      dockerfile: Dockerfile
+    environment:
+      - PROXY_PASS=dream.deeppavlov.ai:8125
+  
   dff-template-skill:
     command: [ "nginx", "-g", "daemon off;" ]
     build:
