--- a/assistant_dists/dream/test.yml
+++ b/assistant_dists/dream/test.yml
@@ -123,5 +123,8 @@ services:
   midas-predictor:
     environment:
       - CUDA_VISIBLE_DEVICES=6
+  dialogpt:
+    environment:
+      - CUDA_VISIBLE_DEVICES=6
   dff-template-skill:
 version: '3.7'
