update entity detection (#134)
* Fix requirements.txt (#84)

* fix itsdangerous requirements

* pin itsdangerous requirements for all flask==1.1.1 servers

* update entity detection

* rm redundant files

* reformat

* reformat

* codestyle

* update requirements

* codestyle

* add requirements

* fixes

* fix: analyze_downloads handling incorrect path for agent container

* refactor: black analyze_downloads

* refactor: ambiguous variable name in analyze_downloads

* fixes

* codestyle

* fixes

* Update requirements.txt

* fixes

* fix pyopenssl requirement

* fixes

* fixes

* fixes

* Update test_entity_detection.py

* handle case with empty input string

* resolve

* Update analyze_downloads.py

* codestyle

* input fixes

* logs

Co-authored-by: Andrii.Hura <54397922+AndriiHura@users.noreply.github.com>
Co-authored-by: mtalimanchuk <mtalimanchuk@gmail.com>
Co-authored-by: Dilyara Baymurzina <dilyara.rimovna@gmail.com>
Co-authored-by: Fedor Ignatov <ignatov.fedor@gmail.com>

--- a/assistant_dists/dream/docker-compose.override.yml
+++ b/assistant_dists/dream/docker-compose.override.yml
@@ -1038,16 +1038,19 @@ services:
     env_file: [.env]
     build:
       args:
-        CONFIG: dialog_entity_detection.json
+        SEQ_TAG_CONFIG: src/wikipedia_entity_detection_distilbert.json
+        EL_TAG_CONFIG: src/el_tags_infer.json
+        CONFIG: entity_detection_eng.json
+        LOWERCASE: 0
         PORT: 8103
         SRC_DIR: annotators/entity_detection/
-        COMMIT: 10f6e39e71f0623ec4ad9fb27ae8739d8624be85
+        FINEGRAINED: 0
       context: ./
-      dockerfile: annotators/entity_detection/Dockerfile_new
+      dockerfile: annotators/entity_detection/Dockerfile
     command: flask run -h 0.0.0.0 -p 8103
     environment:
-      - CUDA_VISIBLE_DEVICES=0
       - FLASK_APP=server
+      - CUDA_VISIBLE_DEVICES=7
     deploy:
       resources:
         limits:
