--- a/annotators/entity_detection/requirements.txt
+++ b/annotators/entity_detection/requirements.txt
@@ -8,3 +8,7 @@ requests==2.27.1
 jinja2<=3.0.3
 Werkzeug<=2.0.3
 sentry-sdk==0.12.3
+spacy==3.2.0
+torch==1.6.0
+transformers==4.6.0
+deeppavlov==0.17.3
