fix: KBQA static EL and Wikidata URLs replaced with environment variables (#151)
* fix: kbqa static el and wikidata urls

* refactor: removed redundant f-string in dialogflows/flows/sport.py

--- a/.env
+++ b/.env
@@ -22,8 +22,8 @@ COMET_SERVICE_URL=http://comet-atomic:8053/comet
 CONCEPTNET_SERVICE_URL=http://comet-conceptnet:8065/comet
 MASKED_LM_SERVICE_URL=http://masked-lm:8088/respond
 SENTIMENT_CLASSIFICATION_SERVICE_URL=http://sentiment-classification:8024/model
-WIKIDATA_URL=http://wiki-parser:8077/model
-ENTITY_LINKING_URL=http://entity-linking:8075/model
+DP_WIKIDATA_URL=http://wiki-parser:8077/model
+DP_ENTITY_LINKING_URL=http://entity-linking:8075/model
 KNOWLEDGE_GROUNDING_SERVICE_URL=http://knowledge-grounding:8083/respond
 WIKIDATA_DIALOGUE_SERVICE_URL=http://wikidata-dial-service:8092/model
 NEWS_API_ANNOTATOR_URL=http://news-api-annotator:8112/respond
