Feat/transformers intent catcher (#135)
* feat: train intent catcher

* feat: intrnt_catcher transformers train and use

* feat: intrnt_catcher transformers train and use

* feat: intent_catcher server and test

* fix: model to cuda

* fix: cuda is available

* fix: paths

* fix: ignore index

* fix: black style

* fix: paths

* fix: paths

* fix:model modes

* fix: load dataset

* fix: no extra info

* fix: no extra info

* fix: params

* fix: paths

* fix: paths

* fix: paths

* fix: dockerfile and downloading

* fix: black style

* fix: extra im ports

* fix: dockerfile

* fix: paths and reqs

* fix: paths

* fix: lineterminator

* fix: paths to save model

* fix: paths to save model

* fix: paths

* fix: sentences

* fix: test file

* fix: working version

* fix: working

* fix info

* files

* fix: gpu for tests

* fix: gpu distr

* fix: codestyle

* fix: codestyle

* fix: friendship fallback

* fix: codestyle

* fix: book skill start if lets chat about books

* fix: no repeat

* fix book turn on

* fix: remove extra comments

* fix: some changes

* fix: use dp based model

* fix: random prhases tto

* fix: dockerfile

* fix: after review

* fix: codestyle

* fix: yml configs

* fix: add files for intent catcher

* fix: codestyle

* fix: nvidia error fix

* fix: upd config

* fix nvidia keyring using wget

* fix: working version

* fix: add files

* file path in dockerfile

* fix: order of init

* fix: codestyle

* fix: upd intent catcher version v2

* fix: revert to prev version

* fix: tests for upd version

* correct scores

Co-authored-by: mtalimanchuk <mtalimanchuk@gmail.com>

--- a/assistant_dists/dream/cpu.yml
+++ b/assistant_dists/dream/cpu.yml
@@ -43,6 +43,9 @@ services:
     environment:
       DEVICE: cpu
       CUDA_VISIBLE_DEVICES: ""
+  intent-catcher:
+    environment:
+      CUDA_VISIBLE_DEVICES: ""
   dialogpt:
     environment:
       CUDA_VISIBLE_DEVICES: ""
