--- a/assistant_dists/dream/test.yml
+++ b/assistant_dists/dream/test.yml
@@ -45,6 +45,10 @@ services:
   sentrewrite:
   dff-intent-responder-skill:
   intent-catcher:
+    volumes:
+      - "~/.deeppavlov:/root/.deeppavlov"
+    environment:
+      - CUDA_VISIBLE_DEVICES=6
   badlisted-words:
   dff-program-y-dangerous-skill:
   dff-movie-skill:
