fix:  proxy dialogpt (#164)

--- a/assistant_dists/dream/proxy.yml
+++ b/assistant_dists/dream/proxy.yml
@@ -592,6 +592,7 @@ services:
       dockerfile: Dockerfile
     environment:
       - PROXY_PASS=dream.deeppavlov.ai:8125
+      - PORT=8125
   
   dff-template-skill:
     command: [ "nginx", "-g", "daemon off;" ]
