Feat/infilling: not used yet (#163)
* Fix requirements.txt (#84)

* fix itsdangerous requirements

* pin itsdangerous requirements for all flask==1.1.1 servers

* infilling added (not tested)

* files moved, some paths fixed

* [DGM-49] path to model fixed, test added, seems working

* takes a batch, bigger test added

* assert added to test

* assert added to test

* minor changes

* fix: codestyle

* fix: proxy pass

* fix: yml configs

* fix: refactor infilling and usage

* fix: paths

* fix: dockerfile

* fix: upd files

* fix: working version

* fix: codestyle

* fix: codestyle

* fix: works on gpu

* gix: readme

Co-authored-by: Andrii.Hura <54397922+AndriiHura@users.noreply.github.com>
Co-authored-by: mtalimanchuk <mtalimanchuk@gmail.com>
Co-authored-by: Dilyara Baymurzina <dilyara.rimovna@gmail.com>

--- a/.env
+++ b/.env
@@ -29,3 +29,5 @@ WIKIDATA_DIALOGUE_SERVICE_URL=http://wikidata-dial-service:8092/model
 NEWS_API_ANNOTATOR_URL=http://news-api-annotator:8112/respond
 WIKI_FACTS_URL=http://wiki-facts:8116/respond
 FACT_RANDOM_SERVICE_URL=http://fact-random:8119/respond
+INFILLING_SERVICE_URL=http://infilling:8122/respond
+
