--- a/assistant_dists/dream/docker-compose.override.yml
+++ b/assistant_dists/dream/docker-compose.override.yml
@@ -19,7 +19,7 @@ services:
           dff-funfact-skill:8104, dff-bot-persona-skill:8105, news-api-annotator:8112,
           dff-gossip-skill:8109, dff-wiki-skill:8111, dff-gaming-skill:8115, topic-recommendation:8113,
           user-persona-extractor:8114, wiki-facts:8116, dff-music-skill:8099, entity-detection:8103, dff-art-skill:8117,
-          midas-predictor:8121, dialogpt:8125, dff-template-skill:8120"
+          midas-predictor:8121, dialogpt:8125, infilling:8122, dff-template-skill:8120"
       WAIT_HOSTS_TIMEOUT: ${WAIT_TIMEOUT:-480}
   convers-evaluator-annotator:
     env_file: [.env]
@@ -1144,7 +1144,7 @@ services:
           memory: 50M
         reservations:
           memory: 50M
-  
+
   dialogpt:
     env_file: [ .env ]
     build:
@@ -1163,6 +1163,23 @@ services:
           memory: 2G
         reservations:
           memory: 2G
+
+  infilling:
+    env_file: [ .env ]
+    build:
+      context: ./services/infilling/
+      args:
+        SERVICE_PORT: 8122
+    command: flask run -h 0.0.0.0 -p 8122
+    environment:
+      - CUDA_VISIBLE_DEVICES=0
+      - FLASK_APP=server
+    deploy:
+      resources:
+        limits:
+          memory: 2.5G # ?
+        reservations:
+          memory: 2.5G # ?
 
   dff-template-skill:
     env_file: [.env]
