--- a/assistant_dists/dream/proxy.yml
+++ b/assistant_dists/dream/proxy.yml
@@ -593,7 +593,16 @@ services:
     environment:
       - PROXY_PASS=dream.deeppavlov.ai:8125
       - PORT=8125
-  
+
+  infilling:
+    command: [ "nginx", "-g", "daemon off;" ]
+    build:
+      context: dp/proxy/
+      dockerfile: Dockerfile
+    environment:
+      - PROXY_PASS=dream.deeppavlov.ai:8122
+      - PORT=8122
+
   dff-template-skill:
     command: [ "nginx", "-g", "daemon off;" ]
     build:
