Feat/update dialogpt (#170)
* feat: update dialogpt

* fix: codestyle

* fix: book skill false start

--- a/services/dialogpt/Dockerfile
+++ b/services/dialogpt/Dockerfile
@@ -8,6 +8,9 @@ ARG PRETRAINED_MODEL_NAME_OR_PATH
 ENV PRETRAINED_MODEL_NAME_OR_PATH ${PRETRAINED_MODEL_NAME_OR_PATH}
 ARG SERVICE_PORT
 ENV SERVICE_PORT ${SERVICE_PORT}
+ARG N_HYPOTHESES_TO_GENERATE
+ENV N_HYPOTHESES_TO_GENERATE ${N_HYPOTHESES_TO_GENERATE}
+
 
 COPY ./requirements.txt /src/requirements.txt
 RUN pip install -r /src/requirements.txt
