--- a/assistant_dists/dream_mini/docker-compose.override.yml
+++ b/assistant_dists/dream_mini/docker-compose.override.yml
@@ -136,7 +136,8 @@ services:
       args:
         SERVICE_PORT: 8125
         SERVICE_NAME: dialogpt
-        PRETRAINED_MODEL_NAME_OR_PATH: microsoft/DialoGPT-small
+        PRETRAINED_MODEL_NAME_OR_PATH: microsoft/DialoGPT-medium
+        N_HYPOTHESES_TO_GENERATE: 5
       context: ./services/dialogpt/
     command: flask run -h 0.0.0.0 -p 8125
     environment:
