--- a/assistant_dists/dream_sfc/dev.yml
+++ b/assistant_dists/dream_sfc/dev.yml
@@ -75,7 +75,7 @@ services:
       - 8023:8023
   ner:
     volumes:
-      - './annotators/NER:/src'
+      - './annotators/NER_deeppavlov:/src'
       - "~/.deeppavlov:/root/.deeppavlov"
     ports:
       - 8021:8021
