--- a/assistant_dists/dream_mini/docker-compose.override.yml
+++ b/assistant_dists/dream_mini/docker-compose.override.yml
@@ -160,6 +160,7 @@ services:
         SERVICE_NAME: dialogpt
         PRETRAINED_MODEL_NAME_OR_PATH: microsoft/DialoGPT-medium
         N_HYPOTHESES_TO_GENERATE: 5
+        CONFIG_NAME: dialogpt_en.json
       context: ./services/dialogpt/
     command: flask run -h 0.0.0.0 -p 8125
     environment:
