docker fixes for hydra configuration poc (#34)
* docker fixes hydra configuration poc

* fix agent installation

* fix dp-agent commit in dockerfile_agent

* Fix requirements.txt (#84)

* update pr against the new main branch

* fix itsdangerous requirements

* pin itsdangerous requirements for all flask==1.1.1 servers

* minimal reproducible example for new dream

* add pem files to gitignore, small agent docker fix

* change commit, remove copy settings

* fix agent command in base compose file

* fix agent installation

* fix agent command in other dists

* fix commands in readme, add telegram section

* update en and ru readme

Co-authored-by: Andrii.Hura <54397922+AndriiHura@users.noreply.github.com>
Co-authored-by: Dilyara Baymurzina <dilyara.rimovna@gmail.com>

--- a/assistant_dists/dream_sfc/docker-compose.override.yml
+++ b/assistant_dists/dream_sfc/docker-compose.override.yml
@@ -1,6 +1,6 @@
 services:
   agent:
-    command: sh -c 'bin/wait && python -m deeppavlov_agent.run -ch http_client -pl assistant_dists/dream_sfc/pipeline_conf.json --cors'
+    command: sh -c 'bin/wait && python -m deeppavlov_agent.run agent.pipeline_config=assistant_dists/dream_sfc/pipeline_conf.json'
     environment:
       WAIT_HOSTS: "convers-evaluator-annotator:8004,
           spacy-nounphrases:8006, dff-program-y:8008, sentseg:8011, convers-evaluation-selector:8009, personality-catcher:8010,
