--- a/dockerfile_agent
+++ b/dockerfile_agent
@@ -20,8 +20,6 @@ RUN mkdir dp-agent
 WORKDIR /dp-agent
 # TODO: Copy only necessary dirs and files
 
-# RUN pip install deeppavlov_agent==2.2.0 sentry-sdk==0.16.0 requests==2.24.0
-
 RUN mkdir /pavlov && \
     cd /pavlov && \
     git clone https://github.com/deepmipt/DeepPavlov && \
@@ -29,8 +27,7 @@ RUN mkdir /pavlov && \
     pip install -e .
 
 RUN pip install sentry-sdk==0.16.0 requests==2.24.0 pandas GitPython==3.1.14 pyaml openpyxl==3.0.0 xlrd==1.2.0
-RUN pip install jinja2==3.0.3 Werkzeug==2.0.3
-RUN pip install https://codeload.github.com/deepmipt/dp-agent/tar.gz/35960a8fb0ac8df8ecf75215c895a64c225c1490
+RUN pip install pip install deeppavlov-agent==2.3.0a0
 
 ENV LANG C.UTF-8
 ENV LC_ALL C.UTF-8
@@ -38,7 +35,7 @@ ENV PYTHONPATH "${PYTHONPATH}:/dp-agent"
 ENV DPA_LAUNCHING_ENV "docker"
 
 COPY . /dp-agent/.
-COPY agent_settings.py /usr/local/lib/python3.7/site-packages/deeppavlov_agent/settings.py
+#COPY agent_settings.py /usr/local/lib/python3.7/site-packages/deeppavlov_agent/settings.py
 #RUN printf 'debug = False\nresponse_logger = False' > /dp-agent/dp_agent_settings.py
 
 
