update entity linking (#12)
* update entity linking

* update

* update entity ranking

* add spelling check

* fix tests

* codestyle

* update memory requirements

* codestyle

* fix kbqa

* codestyle

* fix download paths

* fixes

* update

* add dbpedia types

* fixes

* fixes

* fixes

* fixes

* codestyle

* reduce batch size

* entity linking on cpu

* fixes

* update

* fixes

* fixes

* fix: synchronize with fix/deeppavlov_url

Co-authored-by: dilyararimovna <dilyara.rimovna@gmail.com>

--- a/assistant_dists/dream/docker-compose.override.yml
+++ b/assistant_dists/dream/docker-compose.override.yml
@@ -513,10 +513,9 @@ services:
     env_file: [.env]
     build:
       args:
-        CONFIG: kbqa_entity_linking_page.json
+        CONFIG: entity_linking_eng.json
         PORT: 8075
         SRC_DIR: annotators/entity_linking
-        COMMIT: 5b99ac3392e8e178e2bb4f9b218d4ddb2ec2e242
       context: ./
       dockerfile: annotators/entity_linking/Dockerfile
     environment:
