--- a/annotators/DeepPavlovFactoidClassification/requirements.txt
+++ b/annotators/DeepPavlovFactoidClassification/requirements.txt
@@ -3,5 +3,5 @@ requests==2.23.0
 gunicorn==19.9.0
 jinja2<=3.0.3
 Werkzeug<=2.0.3
-git+https://github.com/deeppavlovteam/bert.git@feat/multi_gpu
+git+https://github.com/deeppavlov/bert.git@feat/multi_gpu
 tensorflow==1.15.5
