--- a/assistant_dists/dream_russian/docker-compose.override.yml
+++ b/assistant_dists/dream_russian/docker-compose.override.yml
@@ -9,6 +9,7 @@ services:
           dff-friendship-skill:8086, entity-detection:8103, dialogpt:8091,
           dff-template-skill:8120, spacy-annotator:8125, dialogrpt:8122, toxic-classification:8126"
       WAIT_HOSTS_TIMEOUT: ${WAIT_TIMEOUT:-480}
+      LANGUAGE: RU
 
   dff-program-y-skill:
     env_file: [.env]
